--- a/static/css/booking.css
+++ b/static/css/booking.css
@@ -262,7 +262,7 @@ h1 {
 
     .booking-table td:nth-of-type(2) { /* Owner */
         flex: 2;
-        justify-content: flex-start;
+        justify-content: flex-end;
     }
 
     .booking-table td:nth-of-type(3) { /* Action */
